[package]
name                 = "caracal-tui"
description          = "Caracal file downloader terminal user interface"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

http-serde = "2"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

futures      = "0.3"
sigfinn      = "0.2"
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

crossterm = { version = "0.27", features = ["event-stream"] }
ratatui   = { version = "0.27", features = ["all-widgets"] }

clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
http = "1"
humansize = "2"
humantime = "2"
resolve-path = "0.1"
semver = "1"
shadow-rs = "0.28"
snafu = "0.8"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }

caracal-base        = { path = "../crates/base" }
caracal-cli         = { path = "../crates/cli" }
caracal-grpc-client = { path = "../crates/grpc-client" }

[build-dependencies]
shadow-rs = "0.28"

[lints]
workspace = true
