[package]
name                 = "caracal-tui"
description          = "Caracal file downloader terminal user interface"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

http-serde = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
toml       = { workspace = true }

futures      = { workspace = true }
sigfinn      = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }

crossterm = { workspace = true, features = ["event-stream"] }
ratatui   = { workspace = true, features = ["all-widgets"] }

clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
http = { workspace = true }
humansize = { workspace = true }
humantime = { workspace = true }
resolve-path = { workspace = true }
semver = { workspace = true }
shadow-rs = { workspace = true }
snafu = { workspace = true }
time = { workspace = true, features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }

caracal-base        = { path = "../crates/base" }
caracal-cli         = { path = "../crates/cli" }
caracal-grpc-client = { path = "../crates/grpc-client" }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
