[package]
name                 = "caracal"
description          = "Caracal file downloader"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

http-serde = "2"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

futures = "0.3"
sigfinn = "0.2"
tokio   = { version = "1", features = ["rt-multi-thread", "sync"] }

reqwest = { version = "0.11", default-features = false, features = ["stream"] }

clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
http = "1"
humansize = "2"
indicatif = "0.17"
resolve-path = "0.1"
shadow-rs = "0.25"
snafu = "0.7"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }

caracal-base        = { path = "../crates/base" }
caracal-cli         = { path = "../crates/cli" }
caracal-engine      = { path = "../crates/engine" }
caracal-grpc-client = { path = "../crates/grpc-client" }

[build-dependencies]
shadow-rs = "0.25"

[lints]
workspace = true
