[package]
name                 = "caracal"
description          = "Caracal file downloader"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

http-serde = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
toml       = { workspace = true }

futures = { workspace = true }
sigfinn = { workspace = true }
tokio   = { workspace = true, features = ["rt-multi-thread", "sync"] }

clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
comfy-table = { workspace = true }
http = { workspace = true }
humansize = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
resolve-path = { workspace = true }
shadow-rs = { workspace = true }
snafu = { workspace = true }
time = { workspace = true, features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }

caracal-base        = { path = "../crates/base" }
caracal-cli         = { path = "../crates/cli" }
caracal-engine      = { path = "../crates/engine" }
caracal-grpc-client = { path = "../crates/grpc-client" }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
