[package]
name                 = "caracal-base"
description          = "Caracal"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
serde = { workspace = true }

http = { workspace = true }

bytes       = { workspace = true }
directories = { workspace = true }
mime        = { workspace = true }
semver      = { workspace = true }
snafu       = { workspace = true }
time        = { workspace = true }
utoipa      = { workspace = true }

[lints]
workspace = true
