[package]
name                 = "caracal-cli"
description          = "Caracal CLI common library"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_with = "3"
toml       = "0.8"

tokio = { version = "1", features = ["fs"] }

http = "1"

tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = "0.3"

snafu = "0.8"

caracal-base = { path = "../base" }

[lints]
workspace = true
