[package]
name                 = "caracal-cli"
description          = "Caracal CLI common library"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
serde      = { workspace = true }
serde_with = { workspace = true }
toml       = { workspace = true }

tokio = { workspace = true }

http = { workspace = true }

tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

snafu = { workspace = true }

caracal-base = { path = "../base" }

[lints]
workspace = true
