[package]
name                 = "caracal-engine"
description          = "Caracal engine"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

async-channel = { workspace = true }
futures       = { workspace = true }
tokio         = { workspace = true }

http      = { workspace = true }
mailparse = { workspace = true }
reqwest   = { workspace = true }
opendal   = { workspace = true }

bytes       = { workspace = true }
snafu       = { workspace = true }
time        = { workspace = true }
urlencoding = { workspace = true }

caracal-base = { path = "../base" }

[lints]
workspace = true
