[package]
name                 = "caracal-grpc-client"
description          = "Caracal gRPC Client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

tokio = { version = "1", features = ["net"] }

http  = "1"
tower = "0.4"

prost-types = "0.13"
tonic       = { version = "0.12", features = ["gzip"] }

semver = "1"
snafu  = "0.8"

caracal-base  = { path = "../base" }
caracal-proto = { path = "../proto" }

[lints]
workspace = true
