[package]
name                 = "caracal-grpc-client"
description          = "Caracal gRPC Client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = { workspace = true }

tokio = { workspace = true }

http       = { workspace = true }
hyper-util = { workspace = true }
tower      = { workspace = true }

prost-types = { workspace = true }
tonic       = { workspace = true }

semver = { workspace = true }
snafu  = { workspace = true }

caracal-base  = { path = "../base" }
caracal-proto = { path = "../proto" }

[lints]
workspace = true
