[package]
name                 = "caracal-metrics"
description          = "Caracal metrics utilities"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme.workspace     = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tokio = { version = "1", features = ["net"] }

axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

bytes      = { workspace = true }
mime       = { workspace = true }
prometheus = { workspace = true }
snafu      = { workspace = true }

[lints]
workspace = true
