[package]
name                 = "caracal-proto"
description          = "Caracal protobuf"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
prost       = "0.13"
prost-types = "0.13"
tonic       = { version = "0.12", features = ["gzip"] }

snafu = "0.8"
time  = { version = "0.3", features = ["formatting", "macros"] }

caracal-base = { path = "../base" }

[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.12", default-features = false, features = [
  "prost",
  "transport",
] }

[lints]
workspace = true
