[package]
name                 = "caracal-proto"
description          = "Caracal protobuf"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true, features = ["gzip"] }
tonic-prost = { workspace = true }

snafu = { workspace = true }
time  = { workspace = true, features = ["formatting", "macros"] }

caracal-base = { path = "../base" }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build       = { workspace = true }

[lints]
workspace = true
