[package]
name                 = "caracal-server"
description          = "Caracal server"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3"
sigfinn = "0.2"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["net"] }

tonic = { version = "0.12", features = ["gzip"] }

axum       = "0.7"
http       = "1"
tower      = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace"] }

zbus = { version = "5", default-features = false, features = ["tokio"] }

lazy_static = "1"
prometheus = "0.13"
semver = "1"
snafu = "0.8"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }

caracal-base    = { path = "../base" }
caracal-engine  = { path = "../engine" }
caracal-metrics = { path = "../metrics" }
caracal-proto   = { path = "../proto" }

[lints]
workspace = true
