[package]
name                 = "caracal-server"
description          = "Caracal server"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = { workspace = true }

serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

futures      = { workspace = true }
sigfinn      = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }

tonic = { workspace = true, features = ["gzip"] }

axum       = { workspace = true }
http       = { workspace = true }
tower      = { workspace = true, features = ["timeout"] }
tower-http = { workspace = true, features = ["trace"] }

zbus = { workspace = true, default-features = false, features = ["tokio"] }

prometheus = { workspace = true }
semver = { workspace = true }
snafu = { workspace = true }
time = { workspace = true, features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

caracal-base    = { path = "../base" }
caracal-engine  = { path = "../engine" }
caracal-metrics = { path = "../metrics" }
caracal-proto   = { path = "../proto" }

[lints]
workspace = true
